# ots-crawl-3d

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/app/: config.py
src/app/modules/: cleaner.py  converter.py  crawler.py  downloader.py
src/app/utils/: blender_utils.py  data_utils.py
